make sure values are contained in help page even when their parsing failed. Remove some deprecated api usage.